--- a/index.html
+++ b/index.html
@@ -12,17 +12,16 @@
 <body class="flex__center">
 
     <div class=" end__screen hidden flex__center">
-
         <h2 class="game__result"> win / defeat </h2>
         <h3 class="phrase__to__guess">a phrase to guess</h3>
         <button class="play__again">play again</button>
     </div>
 
     <h1 class="phrase">
-        -
+        _
     </h1>
 
-    <div class="middle__wrapper">
+    <div class="middle__wrapper flex__center">
         <div class="image flex__center">
             <svg width="350" height="503" viewBox="0 0 350 503" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="drawing">
