--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </div>
 
     <footer class="footer">
-        <p>&copy;2022. Marceli Bil.</p>
+        <p> <a href="https://github.com/MarceliBil" target="_blank"> &copy;2022. Marceli Bil.</a></p>
     </footer>
 
     <script src="./game.js"></script>
